
Mon May 29 18:49:47 CEST 2006 Paolo Molaro <lupus@ximian.com>

	* String.cs: make sure that the chars truncated by a stringbuilder
	are zeroed.

2006-05-29  Martin Baulig  <martin@ximian.com>

	* Exception.cs
	(Exception.StackTrace): Use the new stack trace format which is
	very similar to the one of MS.NET - method name goes first,
	file / line number last and in the method name, we separate class
	and method name by `.'.

	* Environment.cs
	(Environment.StackTrace): Enable line-number information.

2006-05-24  Atsushi Enomoto  <atsushi@ximian.com>

	* DateTime.cs :
	  Implement 2.0 TryParseExact(). Patch by Seo Sanghyeon.

2006-05-17  Kazuki Oikawa  <kazuki@panicode.com>

	* Array.cs : added internal sort method used
	  in System.Collections.Generics.List<T>.Sort(Comparison<T>).

2006-05-15  Zoltan Varga  <vargaz@gmail.com>

	* Environment.cs: Bump corlib version.

2006-05-10  Zoltan Varga  <vargaz@gmail.com>

	* MonoType.cs (GetMethodImpl): Fix a warning.

2006-05-08  Atsushi Enomoto  <atsushi@ximian.com>

	* ArrayTest.cs : use proper comparer in IndexOf() and LastIndexOf().
	  Patch by Kazuki Oikawa. Fixed bug #77277.

2006-05-07  Zoltan Varga  <vargaz@gmail.com>

	* Nullable.cs (Equals): Fix comparison to null. Fixes #78322.

2006-04-28  Atsushi Enomoto  <atsushi@ximian.com>

	* Nullable.cs : updated Nullable<T> API to 2.0 RTM.

2006-04-26  Atsushi Enomoto  <atsushi@ximian.com>

	* Double.cs : (Parse) handle currency symbol when
	  AllowCurrencySymbol is passed as part of the style. Patch by
	  nede@aliquant.com, modified to eliminate redundant Substring().
	  This fixes bug #77721.

2006-04-26  Atsushi Enomoto  <atsushi@ximian.com>

	* MonoType.cs : (GetMethod) when zero-length type[] is explicitly
	  passed, don't return methods with some arguments. Fixed bug #77367.

2006-04-21  Gert Driesen  <drieseng@users.souceforge.net>

	* Enum.cs: Provide meaningful message when type of passed in value
	does not match enum type.
